<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.0.0</version>
  <description>A catkin package to wrap the AprilTags library</description>

    <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>

  <license>LGPL</license>


  <author email="kumarsha@cs.cmu.deu">Kumar Shaurya Shankar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>OpenCV</build_depend>
  <run_depend>OpenCV</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
